# cookiecutter-datalus

./: LICENSE  README.md  cookiecutter.json  test_config.yml
hooks/: post_gen_project.py
resources/: ci.drawio
{{cookiecutter.repo}}/: .devcontainer.json  .env  .gitattributes  .gitignore  .gitlab-ci.yml  LICENSE  README.md  cookiecutter-config.json  {{cookiecutter.repo}}.code-workspace
{{cookiecutter.repo}}/.github/: release.yml
{{cookiecutter.repo}}/.github/actions/setup/: action.yml
{{cookiecutter.repo}}/.github/workflows/: feature.yaml  master.yaml  master.yml  master_pr.yaml  master_pr.yml  prod.yaml  prod.yml  prod_mr.yaml  prod_pr.yaml  prod_pr.yml
{{cookiecutter.repo}}/docker/: .dockerignore  dev.dockerfile  dev_requirements.txt  docker-compose.yml  henanigans.zsh-theme  prod.dockerfile  prod_requirements.txt
{{cookiecutter.repo}}/docker/config/: build.yaml  dev-env  dev_requirements.txt  henanigans.zsh-theme  pdm.toml  prod.toml  prod_requirements.txt  pyproject.toml  secret-env  zshrc
{{cookiecutter.repo}}/docker/config/jupyter/: jupyter_lab_config.py
{{cookiecutter.repo}}/docker/config/jupyter/lab/user-settings/@jupyterlab/shortcuts-extension/: shortcuts.jupyterlab-settings
{{cookiecutter.repo}}/docker/config/jupyter/lab/workspaces/: default-37a8.jupyterlab-workspace
{{cookiecutter.repo}}/docker/jupyter/: jupyter_lab_config.py
{{cookiecutter.repo}}/docker/jupyter/lab/user-settings/@jupyterlab/apputils-extension/: themes.jupyterlab-settings
{{cookiecutter.repo}}/docker/scripts/: prod-cli  s6-init.sh  s6-service.sh  s_tools.sh  x_tools.sh
{{cookiecutter.repo}}/helm/: Chart.yaml  README.md  values.yaml
{{cookiecutter.repo}}/helm/templates/: _helpers.tpl  argocd-application.yaml  deployment.yaml  desktop-volume.yaml  env-configmap.yaml  env-secret.yaml  image-pull-secret.yaml  namespace.yaml  nginx-ingress.yaml  repo-volume.yaml  service.yaml  traefik-ingress.yaml
{{cookiecutter.repo}}/mkdocs/: mkdocs.yml
{{cookiecutter.repo}}/mkdocs/md/: index.md  style.css
{{cookiecutter.repo}}/pip/: MANIFEST.in  setup.py  tox.ini
{{cookiecutter.repo}}/python/: cli.py  conftest.py
{{cookiecutter.repo}}/python/{{cookiecutter.repo | replace('-', '_')}}/: __init__.py  command.py
{{cookiecutter.repo}}/python/{{cookiecutter.repo | replace('-', '_')}}/core/: __init__.py  tools.py  tools_test.py
{{cookiecutter.repo}}/python/{{cookiecutter.repo}}/server/: api.py  app.py
{{cookiecutter.repo}}/sphinx/: conf.py  core.rst  index.rst  intro.rst  modules.rst  server.rst  style.css
{{cookiecutter.repo}}/templates/: style.css.j2
